# news-scraper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  pyproject.toml
.cursor/: hooks.json
.cursor/agents/: code-review.md
.cursor/hooks/: validate-shell.sh
.cursor/skills/code-review/: SKILL.md
alembic/: env.py
alembic/versions/: 4cbaaf9285fb_add_created_at_and_updated_at_indexes_.py  4fc40fb00ec0_create_sources_table.py  94ac8a40f2db_seed_lanacion_source.py  a79b3ff73cf9_create_articles_table.py  bcd78a54e570_seed_infobae_source.py  f08672783f59_seed_lapoliticaonline_source.py
docs/: PROJECT.md  architecture.md  coding-guidelines.md  coding.md  cursor_cloud.md  database.md  documentation-guidelines.md  learnings.md  libraries.md  models-guidelines.md  models.md  parsers.md  project-structure.md  queries.md  requirements.md  specs.md  testing-guidelines.md  testing.md  writing.md
docs/specs/: S002-db-scaffolding.md  S003-add-scrape-argument-to-cli.md  S004-add-infobae-scraping-part-1.md  S005-add-infobae-scraping-part-2.md  S006-add-infobae-scraping-part-3.md  S007-lanacion-scraping.md  S008-parser-framework.md  S009-scrape-command.md  S010-lapoliticaonline-scraping.md
src/news_scraper/: __init__.py  __main__.py  browser.py  cli.py  config.py  logging.py  scraper.py  validation.py
src/news_scraper/db/: __init__.py  base.py  session.py
src/news_scraper/db/models/: __init__.py  article.py  source.py
src/news_scraper/db/repositories/: __init__.py  article.py
src/news_scraper/parsers/: __init__.py  base.py  infobae.py  lanacion.py  registry.py
src/news_scraper/parsers/sites/: __init__.py  infobae.py  lanacion.py  lapoliticaonline.py
src/news_scraper/parsers/utils/: __init__.py  images.py  url.py
tests/: __init__.py  conftest.py  test_browser.py  test_cli.py  test_logging.py  test_scraper.py  test_validation.py
tests/db/: test_models.py
tests/db/models/: test_article.py  test_source.py
tests/db/repositories/: test_article.py
tests/fixtures/: infobae_sample.html  lanacion_sample.html  lapoliticaonline_sample.html
tests/parsers/: test_base.py  test_infobae.py  test_lanacion.py  test_registry.py
tests/parsers/sites/: __init__.py  test_infobae.py  test_lanacion.py  test_lapoliticaonline.py
