[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-scraper"
version = "0.1.0"
description = "A professional Python CLI application for scraping news articles from URLs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Developer" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "typer",
    "rich",
    "structlog",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff==0.14.11",
    "mypy==1.19.1",
    "pre-commit",
]

[project.scripts]
news-scraper = "news_scraper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/news_scraper"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["news_scraper"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["typer.*"]
implicit_reexport = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=news_scraper --cov-report=term-missing"

[tool.coverage.run]
source = ["src/news_scraper"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
